--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@types/react-dom": "^18.3.0",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
